--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^5.0.0",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
